tests/machine/x/clj/load_yaml.error
exit status 1
Syntax error (ClassNotFoundException) compiling at (/workspace/mochi/tests/machine/x/clj/load_yaml.clj:25:20).
clojure.data.json

Full report at:
/tmp/clojure-18287784112358074738.edn
